Refactor: streamline validation, execution, and metrics handling in trading services
- Simplified validation conditions in `TradingSignalMetricsService` and `TradingPositionSyncService`.
- Refactored `TradingExceptionHandler` to handle more edge cases and provide detailed validation feedback.
- Enhanced test coverage for signal execution, metrics resolution, and exception handling.
- Consolidated common logic in test utilities for improved maintainability.
- Updated private methods in `V5StrategyEngineTest` to cover edge cases and improve unit test coverage.
- Refactored `TradingSignalOrderServiceTest` to use parameterized methods and reduce redundancy.